# csadvis

./: .dockerignore  .env.example  .gitattributes  .gitignore  .steam_backfill_state.json  CLAUDE.md  CLAUDE_BACKLOG.md  CLAUDE_CONTEXT.md  CLAUDE_DESIGN_SPEC.md  CLAUDE_ROLES.md  CUsersAsyldevcs2.env  Dockerfile  Makefile  README.md  STATUS.md  _nonascii.txt  apply_fix.ps1  config.py  docker-compose.yml  entrypoint.sh  output.csv  pyproject.toml  requirements-dev.txt  requirements.txt  run_dashboard.py
.claude/: settings.local.json
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
api/: schemas.py
api/routes/: __init__.py  containers.py  items.py  stats.py  sync.py  system.py
cli/: __main__.py  database.py  diagnostics.py  main.py  service.py  setup.py
cli/utils/: browser.py
context/: architecture.md  config.md  conventions.md  database.md  frontend.md  modules.md  overview.md  signals.md  testing.md  ubiquitous_language.md
database/: connection.py  dtos.py  factory.py  models.py  postgres_repo.py  repositories.py
engine/: correlation.py  event_calendar.py  investment.py  portfolio_advisor.py
frontend/: app.py  balance.py  cache.py  callbacks.py  charts.py  helpers.py  inventory.py  theme.py
frontend/renderers/: __init__.py  analytics.py  inventory.py  market.py  portfolio.py  system_status.py
infra/: logger.py  metrics.py  redis_client.py
ingestion/: steam_rate_limit.py  steam_transactions.py
ingestion/steam/: __init__.py  client.py  logic.py  parser.py
scheduler/: celery_app.py  tasks.py
scraper/: db_writer.py  runner.py  state.py  steam_market_scraper.py
scripts/: cleanup_prices.py  init_timescale.sql  migrate_sqlite_to_pg.py
seed/: __init__.py  data.py
services/: cache_writer.py  event_logger.py  item_service.py  maintenance.py  portfolio.py  reconciler.py  signal_handler.py  steam_sync.py  task_manager.py  trade_ledger.py  webhook_dispatcher.py
services/analytics/: armory_advisor.py
src/: main.py
src/api/: app.py  schemas.py
src/api/routes/: __init__.py  auth.py  containers.py  items.py  metrics_route.py  positions.py  scrape_sessions.py  stats.py  sync.py  system.py
src/cli/: __init__.py  database.py  diagnostics.py  main.py  service.py  setup.py
src/domain/: __init__.py  abstract_repo.py  armory_pass.py  connection.py  correlation.py  deal_service.py  dtos.py  event_calendar.py  event_loader.py  events.py  factory.py  group_service.py  investment.py  item_service.py  lifecycle.py  lifecycle_service.py  models.py  oscillation.py  portfolio.py  portfolio_advisor.py  position_service.py  postgres_repo.py  pruning.py  reconciler.py  repositories.py  services.py  specifications.py  sql_repositories.py  trade_advisor.py  trade_ledger.py  value_objects.py  wall_filter.py
src/domain/analytics/: armory_advisor.py
src/infra/: cache_writer.py  event_logger.py  maintenance.py  redis_client.py  scrape_guard.py  signal_handler.py  steam_credentials.py  task_manager.py  webhook_dispatcher.py  work_queue.py
src/scheduler/: __init__.py  celery_app.py  tasks.py
src/scrapper/: db_writer.py  nameid_cache.py  runner.py  steam_inventory.py  steam_market_scraper.py  steam_rate_limit.py  steam_sync.py  steam_transactions.py  steam_wallet.py
src/scrapper/steam/: __init__.py  client.py  formatter.py  logic.py  mapper.py  parser.py
src/scripts/: backup_db.sh  check_inv.py  check_trade_advice.py  cleanup_prices.py  init_timescale.sql  migrate_ap_assets.sql  migrate_armorypass_type.sql  migrate_drop_dim_deals.sql  migrate_lifecycle_hmm.sql  migrate_positions_module.sql  migrate_remove_currency.sql  migrate_sqlite_to_pg.py
src/ui/: __init__.py  app.py  balance.py  callbacks.py  charts.py  helpers.py  inventory.py  theme.py  url_generator.py
src/ui/assets/: custom.css
src/ui/renderers/: analytics.py  inventory.py  market.py  portfolio.py  system_status.py
tests/: conftest.py  test_armory_advisor.py  test_armory_pass.py  test_auth.py  test_balance.py  test_cache_writer.py  test_celery_tasks.py  test_context_aware_jit.py  test_correlation.py  test_domain_objects.py  test_domain_services.py  test_e2e_dashboard.py  test_event_calendar.py  test_event_loader.py  test_event_logger.py  test_investment.py  test_investment_domain.py  test_item_service.py  test_jit_valuation.py  test_lifecycle_hmm.py  test_lifecycle_service.py  test_maintenance.py  test_market_validator.py  test_portfolio_advisor.py  test_portfolio_service.py  test_position_entity.py  test_pruning.py  test_reconciler.py  test_repositories.py  test_scrape_guard.py  test_scraper.py  test_services_portfolio.py  test_signal_handler_pv17.py  test_smart_buy_price.py  test_sparkline_history.py  test_specifications.py  test_steam_credentials.py  test_steam_market.py  test_steam_sync.py  test_steam_transactions.py  (+9 more)
tests/integration/: run_flip_diag.py  test_db_write_layer.py  test_flip_candidates_live.py  test_paused_auth.py  test_rate_limit.py  test_worker_crash.py
tests/regression/: test_boundary_values.py  test_investment_signals_snapshot.py  test_model_comparator.py  test_property_based.py
