[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs2-analytics"
version = "1.0.0"
description = "CS2 Market Analytics Platform — EV calculator, risk engine, inventory advisor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "sqlalchemy>=2.0.35",
    "aiohttp>=3.10.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "apscheduler>=3.10.4",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "dash>=2.18.1",
    "plotly>=5.24.1",
    "dash-bootstrap-components>=1.6.0",
    "pandas>=2.2.3",
    "httpx>=0.27.2",
    "curl-cffi>=0.7.0",
    "brotlicffi>=1.0.9.2",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "pyyaml>=6.0.0",
    "psycopg2-binary>=2.9.9",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "flask-caching>=2.3.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
]

[project.scripts]
cs2 = "cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
packages = ["cli", "cli.utils"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.11",
]

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths   = ["tests"]
pythonpath  = ["src"]
addopts     = "-v --tb=short -m 'not e2e and not slow'"
markers   = [
    "e2e:  end-to-end Playwright tests — require a running dashboard on localhost:8050",
    "slow: stress / performance tests — excluded from default CI run",
]

# ─── ruff (linter + formatter + auto-fix / Rector analogue) ──────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort (import order)
    "UP",   # pyupgrade  ← modernises syntax (Rector equivalent)
    "B",    # flake8-bugbear (likely bugs and design issues)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
    "PTH",  # pathlib over os.path
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in argument defaults (Dash uses this)
    "RUF012", # mutable class attributes — SQLAlchemy uses this pattern
    "RUF001", # ambiguous Unicode in strings — intentional (Russian UI text)
    "RUF002", # ambiguous Unicode in docstrings — intentional
    "RUF003", # ambiguous Unicode in comments — intentional
    "C408",   # unnecessary dict()/list() calls — cosmetic, fix manually if desired
]

[tool.ruff.lint.isort]
known-first-party = [
    "api", "database", "engine", "frontend",
    "ingestion", "scheduler", "scraper", "seed",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── mypy (static type checker / PHPStan equivalent) ─────────────────────────
[tool.mypy]
python_version         = "3.11"
strict                 = false
warn_return_any        = true
warn_unused_ignores    = true
warn_redundant_casts   = true
disallow_untyped_defs  = true
ignore_missing_imports = true   # third-party stubs not installed

[[tool.mypy.overrides]]
module = [
    "dash.*",
    "dash_bootstrap_components.*",
    "plotly.*",
    "apscheduler.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true
